# timer

./: .gitignore  CMakeLists.txt
scripts/: build
src/: CMakeLists.txt  main.cc  timer.qml  timer.qrc
src/qml/: ArcProgress.js  ArcProgress.qml  Controller.js  TimerState.qml  timer.qml  timer.qrc
tests/: CMakeLists.txt  main.cc  tests.qrc  tst_ArcProgress.qml  tst_timer.qml
